apps/mytodo-be/overlay/prod/mytodo-be-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: prod-mytodo
  annotations:
    argocd.argoproj.io/sync-wave: "-1"
