apps/mytodo-be/overlay/prod/nginx-ingress.yaml


---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mytodo
  annotations:
    cert-manager.io/cluster-issuer: prod-letsencrypt
spec:
  ingressClassName: nginx

  tls:
    - hosts:
        - api.snagurum.in
      secretName: prod-mytodo-tls

  rules:
    - host: api.snagurum.in
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: prod-mytodo-be
                port:
                  number: 8000
